# seedling

./: .gitattributes  .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-offline.cmd  install.cmd  install.ps1  install.sh  pyproject.toml  ruff.toml  seedling.conf  uninstall.cmd  uninstall.ps1  uninstall.sh
docs/: COMMANDS.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION.md  GUIDE.md  LICENSING.md  OFFLINE.md  PROFILES.md  conf.py  index.md  requirements.txt
installers/: build_offline.py  build_offline.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: pyproject.toml
src/seedling/: __init__.py  admin.py  cli.py  colors.py  config.py  confirm.py  download.py  fsutil.py  git_tool.py  paths.py  profile.py  runlog.py  shell_integration.py  uv_tool.py  winlocks.py
src/seedling/commands/: activate_cmd.py  admin_cmd.py  apply_cmd.py  auto_activate_cmd.py  config_cmd.py  deactivate_cmd.py  default_venv_cmd.py  download_cmd.py  install_cmd.py  kill_cmd.py  list_cmd.py  logs_viewer_cmd.py  purge_cmd.py  python_cmd.py  python_remove_cmd.py  remove_cmd.py  repo_cmd.py  status_cmd.py  summary_cmd.py  uninstall_cmd.py  update_cmd.py  venv_cmd.py  venv_remove_cmd.py  vscode_cmd.py
src/seedling/shell/: seed.ps1.template  seed.sh.template
tests/: conftest.py  test_admin_family.py  test_build_offline.py  test_cli_commands.py  test_config_and_paths.py  test_destructive.py  test_download_commands.py  test_fsutil.py  test_installer_offline.py  test_installer_windows.py  test_logs_viewer.py  test_profile.py  (+12 more)
(+6 files in other folders)
