[project]
name = "seedling"
version = "0.1.0"
description = "A tidy, single-folder wrapper around uv for getting started with Python."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
seed-cli = "seedling.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seedling"]
