[project]
name = "seedling"
# Read from seedling/__init__.py (see [tool.hatch.version]) so the version
# lives in exactly one place -- `seed --version` reports the same string the
# built distribution carries, and a bump is a one-line edit.
dynamic = ["version"]
description = "A tidy, single-folder wrapper around uv for getting started with Python."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
seed-cli = "seedling.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "seedling/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["seedling"]
